# Diabetes-Risk-Prediction

./: .hintrc  Diabetes_prediction.ipynb  README.md  app.py  diabetes_lgbm_model.pkl  lgbm_model.pkl  pyproject.toml  scaler.pkl
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
static/: style.css
templates/: index.html  result.html
