[project]
name = "diabetes-prediction"
version = "0.1.0"
description = "Project is used to predict Diabetes Risk"
authors = [
    {name = "Nivash R N"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["ipykernel (>=6.29.5,<7.0.0)", "flask (>=3.1.0,<4.0.0)", "numpy (>=2.2.5,<3.0.0)", "pandas (>=2.2.3,<3.0.0)", "scikit-learn (>=1.6.1,<2.0.0)", "matplotlib (>=3.10.1,<4.0.0)", "seaborn (>=0.13.2,<0.14.0)"]